# cw20-mintable

./: .gitignore  Cargo.toml  README.md  cw20_mintable.wasm  cw20_mintable_optimized.wasm
schema/: cw20-mintable.json
schema/raw/: execute.json  query.json  response_to_minters.json
src/: allowances.rs  contract.rs  msg.rs  state.rs
