[package]
name = "cw20-mintable"
version =  "0.1.0"
authors = ["Plastic Digits <plasticdigits@users.noreply.github.com>"]
edition = "2021"
description = "Mintable fork of CW-20 base"
license = "GPL-3.0"
repository = "https://github.com/plasticdigits/cw20-mintable"
homepage = "https://ceramicliberty.com"
documentation = "https://ceramicliberty.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "2.0.2"
cw2 = "2.0.0"
cw20 = "2.0.0-rc.0"
cw-storage-plus = "2.0.0"
cosmwasm-std = "2.0.2"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.4"

[dev-dependencies]
cw-multi-test = "2.0.0"
cw-utils = "2.0.0"
